# biomed-multi-view

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements-mps.txt  requirements.txt
.github/: ISSUE_TEMPLATE
.github/workflows/: python-package.yaml
bmfm_sm/api/: dataset_registry.py  smmv_api.py  smmv_pretrained_model.py
bmfm_sm/core/data_modules/: splits.py
bmfm_sm/core/modules/: base_pretrained_model.py
bmfm_sm/launch/: run_finetune.py
bmfm_sm/predictive/data_modules/: graph_finetune_dataset.py  multimodal_finetune_dataset.py
bmfm_sm/predictive/modules/: finetune_lightning_module.py
bmfm_sm/resources/: dataset_registry.yaml  modelcard_template.md
notebooks/: smmv_api_demo.ipynb
